kubernetes/infrastructure/gateway/configs/manifests/servarr-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-httproutes-from-servarr
  namespace: ingress
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: servarr
  to:
  - group: ""
    kind: Service
